objects/tspa__Digital_Engagement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this will have all the configurations related to Digital Engagement messaging</description>
    <fields>
        <fullName>tspa__Channel_Type__c</fullName>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Original_Value__c</fullName>
        <label>Original Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isActive__c</fullName>
        <label>isActive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>VRA-Digital Engagement</label>
</CustomObject>